--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.10.0",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.9"
